--- a/ViewPoint_files/base.css
+++ b/ViewPoint_files/base.css
@@ -264,4 +264,119 @@
 	.half-bottom { margin-bottom: 10px !important; }
 	.add-bottom { margin-bottom: 20px !important; }
 
+/*Swipe*/
+/*===================================*/
+.swipe {
+  overflow: hidden;
+  visibility: hidden;
+  position: relative;
+}
+.swipe-wrap {
+  overflow: hidden;
+  position: relative;
+}
+.swipe-wrap > div {
+  float:left;
+  width:100%;
+  position: relative;
+}
 
+#slider{
+	visibility: visible;
+	position: fixed;
+	top: -30000px;
+	z-index: 1000;
+}
+
+#slider .wrap{
+	height: 350px;
+	min-width: 900px;
+}
+#slider .swipe-wrap{
+}
+
+#slider .wrap .container{
+	background: #3A3A3A;
+	width: 900px;
+	height: 350px;
+	margin: 0 auto;
+	box-shadow: 0 0 20px rgba(0, 0, 0, .25);
+	color: #A8A8A8;
+	padding: 20px;
+	position: relative;
+}
+
+#slider .wrap .container .actionButton{
+	background: #F15A23;
+	position: absolute;
+	top: 0px;
+	right: 0px;
+	padding: 5px 10px;
+	text-decoration: none;
+}
+
+#slider .wrap .container .image{
+	position: absolute;
+	top: 0px;
+	left: 0px;
+}
+
+#slider .wrap .container .content{
+	height: 330px;
+	width:350px;
+	font-size: 12px;
+	float: right;
+	text-align: left;
+}
+
+#slider .wrap .container .content p{
+	text-align: left;
+	font-size: 12px;
+	line-height: 1.5;
+	margin: 0 0 10px 0;
+}
+
+#slider .wrap .container h2{
+	color: white;
+	font-size: 14px;
+	font-weight: normal;
+	text-align: left;
+	padding: 0;
+	border-bottom: 1px solid white;
+	margin-bottom: 4px;
+	line-height: 1.8;
+}
+
+
+#projectHover{
+	background: rgba(255, 255, 255, .6);
+	height: 100%;
+	width: 100%;
+	position: fixed;
+	top: 35px;
+	left: 0;
+	z-index: 300;
+	display: none;
+}
+
+#projectHover  a{
+	background: no-repeat 0 -1627px #F15A23;
+	display: block;
+	padding: 5px 10px;
+	color: white;
+	text-decoration: none;
+	margin: 30px 0 0 6px;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+	float: left;
+}
+
+#projectHover  a:hover{
+	background-color: #3E3D3D
+}
+#projectHover #buttons{
+	position: absolute;
+	right: 20px;
+	top: 20px;
+}
